--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,662 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700&display=swap');
+
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html{
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body{
+  font-family: 'Manrope', sans-serif;
+  position: relative;
+}
+
+.menu-overlay{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #ffff;
+  opacity: 0.3;
+  width: 100%;
+  height: 100%;
+  display: none;
+  transition: all 0.5s;
+}
+
+/** NAVIGATION SECTION **/
+.main-head{
+  background-color: #101010;
+}
+
+.nav-img-none{
+  display: none;
+}
+
+.header-content{
+  border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+  padding: 4rem 0.5rem 4rem 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+.head-name{
+  font-size: 2.7rem;
+  font-weight: 900;
+  color: #fff;
+}
+
+.mobile-head{
+  display: none;
+}
+
+.nav-close{
+  display: none;
+}
+
+.nav-open{
+  transform: translateY(-100%);
+}
+
+.nav{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 4rem;
+}
+
+.nav-link{
+  font-size: 1.25rem;
+  color: #fff;
+  font-weight: 400;
+  text-decoration: none;
+  letter-spacing: 0.1rem;
+  text-transform: uppercase;
+}
+
+.hero{
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+.hero-container{
+  padding: 1.3rem 0rem;
+  display: flex;
+  gap: 8rem;
+}
+
+.hero-text{
+  padding-top: 8rem;
+  flex-basis: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.hero-text h5{
+  font-size: 4rem;
+  color: #fff;
+  line-height: 4.2rem;
+  letter-spacing: 0.5rem;
+}
+
+.hero-text span{
+  color: rgba(250, 250, 250, 0.2);
+  font-weight: 400;
+  letter-spacing: 0.5rem;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.hero-info{
+  color: #ffffff;
+  font-size: 1.35rem;
+  letter-spacing: 0.1rem;
+  line-height: 2.2rem;
+  padding-bottom: 2.6rem;
+}
+
+.hero-btn a{
+  color: #fff;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  background-color: #d8704a;
+  padding: 1.3rem 2.2rem;
+  cursor: pointer;
+  border-radius: 4px;
+  text-decoration: none;
+}
+
+.hero-img{
+  flex-basis: 60%;
+}
+
+.hero-img img{
+  width: 100%;
+}
+
+/****** PRODUCT CONTAINER *******/
+.display-section{
+  max-width: 100rem;
+  padding-top: 15rem;
+  margin: 0 auto;
+}
+
+.product-container{
+  display: flex;
+  flex-direction: column;
+  gap: 12rem;
+}
+
+.product-cont {
+  display: flex;
+  align-items: center;
+  gap: 10rem;
+}
+
+.product-cont img{
+  width: 38vw;
+}
+
+.prodd-info{
+  display: flex;
+  flex-direction: column;
+  gap: 2.8rem;
+}
+
+.prodd-head{
+  font-size: 3.8rem;
+}
+
+.prod-text{
+  font-size: 1.3rem;
+  line-height: 2.2rem;
+}
+
+.prodd-btn{
+  color: #fff;
+  text-decoration: none;
+  background-color: #d8704a;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.4rem;
+  border-radius: 3px;
+  width: 14rem;
+  padding: 1rem 2rem;
+}
+
+.product-hero-name{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.product-hero-name h4{
+  font-size: 4rem;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.product-hero{
+  padding: 8rem 0rem;
+}
+
+.product-description{
+  max-width: 100rem;
+  padding-top: 9rem;
+  margin: 0 auto;
+}
+
+.back a{
+  color: #000000;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.back{
+  padding-bottom: 6rem;
+}
+
+.prod-describe{
+  display: flex;
+  align-items: center;
+  gap: 10rem;
+  padding-bottom: 9rem;
+}
+
+.desc-img img{
+  width: 38vw;
+}
+
+.desc-text h3{
+  font-size: 3.8rem;
+  padding-bottom: 2.4rem;
+}
+
+.desc-text p{
+  font-size: 1.3rem;
+  line-height: 2.2rem;
+  padding-bottom: 2rem;
+}
+
+.desc-text span{
+  display: block;
+  font-weight: 900;
+  font-size: 1.4rem;
+  padding-bottom: 2.2rem;
+}
+
+.counter{
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+
+.counter div{
+  display: flex;
+  align-items: flex-start;
+  height: 3.6rem;
+  justify-content: center;
+  gap: 3rem;
+  background-color: #eee;
+  padding: 0.6rem 2.4rem;
+}
+
+.counter div button{
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #444;
+}
+
+.add-cart{
+  color: #fff;
+  text-decoration: none;
+  background-color: #d8704a;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.23rem;
+  border-radius: 3px;
+  width: 14rem;
+  padding: 1rem 2rem;
+  border: none;
+  cursor: pointer;
+}
+
+.features h3{
+  font-size: 2.3rem;
+  padding-bottom: 3rem;
+}
+
+.features{
+  font-size: 1.24rem;
+}
+
+.prod-features{
+  padding-bottom: 13rem;
+}
+
+.product-images{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 70rem;
+  column-gap: 1rem;
+  align-items: center;
+}
+
+.prod-img:nth-child(2){
+  width: 100%;
+  height: 54rem;
+}
+
+.prod-img:nth-child(1), .prod-img:nth-child(3){
+  height: 27rem;
+  width: 100%;
+  transform: translateY(-13.6rem);
+}
+
+.prod-img:nth-child(3){
+  transform: translateY(-26.2rem);
+}
+
+.also-like{
+  padding-bottom: 3.5rem;
+}
+
+.also-like h3{
+  text-align: center;
+  font-size: 2.7rem;
+  text-transform: uppercase;
+  padding-bottom: 6rem;
+}
+
+.like{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap:5rem;
+}
+
+.also{
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+  align-items: center;
+}
+
+.also a{
+  color: #fff;
+  text-decoration: none;
+  background-color: #d8704a;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 1.4rem;
+  border-radius: 3px;
+  width: 14rem;
+  padding: 1rem 2rem;
+}
+
+.also p{
+  font-size: 1.8rem;
+  font-weight: 800;
+  text-transform: uppercase;
+}
+
+.also img{
+  width: 100%;
+}
+
+/****** ITEMS SECTION *****/
+.item-section{
+  padding: 17rem 0rem 10rem 0rem;
+}
+
+.items{
+  max-width: 100rem;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 1.6rem;
+}
+
+.item-box{
+  display: flex;
+  flex-direction: column;
+  gap: 1.4rem;
+  position: relative;
+  align-items: center;
+  background-color: #f1f1f1;
+  padding-top: 8rem;
+  padding-bottom: 2.4rem
+}
+
+.item-box h5{
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+.item-img{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: -30%;
+}
+
+.item-img img{
+  width: 8rem;
+}
+
+.item-link{
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.item-link a{
+  color: #000;
+  text-decoration: none;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+}
+
+/***** PRODUCT SECTION ******/
+.section-product{
+  padding: 6rem 0rem;
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+.prod{
+  border-radius: 7px;
+  background-color: #d8704a;
+  display: flex;
+  align-items: flex-start;
+  gap: 8rem;
+  padding: 0rem 9rem;
+  padding-top: 7rem;
+}
+
+.product-img img{
+  width: 90%;
+  transform: translateY(0.3rem);
+}
+
+.prod-head{
+  color: #fff;
+  font-size: 4.5rem;
+  line-height: 4rem
+}
+
+.prod-head span{
+  display: block;
+}
+
+.product-text{
+  padding-top: 4rem;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  padding-right: 4rem;
+  flex-basis: 50%;
+  padding-bottom: 2rem;
+}
+
+.product-link a {
+  color: #fff;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  background-color: #000000;
+  padding: 1.3rem 2.2rem;
+  cursor: pointer;
+  border-radius: 4px;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+}
+
+.prod-info{
+  color: #fff;
+  font-size: 1.24rem;
+  letter-spacing: 0.1rem;
+  line-height: 1.7rem;
+}
+
+.prod-2-text a,.prod-3-text a{
+  color: #000000;
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  background-color: rgba(250, 250, 250, 0.2);
+  padding: 1.3rem 2.2rem;
+  border: 2px solid #000000;
+  cursor: pointer;
+  border-radius: 4px;
+  letter-spacing: 0.1rem;
+  text-decoration: none;
+  max-width: 15rem;
+}
+
+.mobile-audio{
+  display: none;
+}
+
+.mobile-prod{
+  display: none;
+}
+
+.prod-2{
+  position: relative;
+}
+
+.prod-2-text{
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  top: 20%;
+  left: 10%;
+}
+
+.prod-2-text span,.prod-3-text span{
+  color: #000;
+  font-size: 2.7rem
+}
+
+.prod-2-img img{
+  max-width: 100rem;
+}
+
+.prod-3 {
+  display: flex;
+  gap: 1rem;
+}
+
+.prod-3-text {
+  display: flex;
+  background-color: #F1f1f1;
+  border-radius: 7px;
+  flex-direction: column;
+  justify-content: center ;
+  gap: 2.3rem;
+  flex-basis: 50%;
+  padding-left: 8rem;
+}
+
+.prod-3-1 img{
+  width: 95%;
+}
+
+/******* AUDIO SECTION *****/
+.section-audio{
+  padding: 10rem 0rem 13rem 0rem;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+.audio-info{
+  display: flex;
+  gap: 13rem;
+}
+
+.audio-text{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.4rem;
+}
+
+.audio-text h4{
+  font-size: 3.4rem;
+  text-transform: uppercase;
+  padding-bottom: 1.4rem;
+}
+
+.audio-text h4 span{
+  color: #d8704a;
+}
+
+.audio-text p{
+  font-size: 1.3rem;
+  line-height: 2.1rem
+}
+
+.audio-none{
+  display: none;
+}
+
+.audio-img img{
+  width: 48rem;
+}
+
+/******* FOOTER SECTION *****/
+.footer{
+  background-color: #000;
+  padding: 7rem 0rem 5rem 0rem
+}
+
+.footer-content{
+  max-width: 100rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-name{
+  font-size: 2.5rem;
+  font-weight: 900;
+  color: #fff;
+}
+
+.footer-copy{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 3rem
+}
+
+.footer-nav{
+  display: flex;
+  align-items: center;
+  gap: 3.5rem;
+}
+
+.footer-nav a{
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.23rem;
+  text-transform: uppercase;
+  padding-bottom: 0rem;
+}
+
+.footer-text,.copyright{
+  color:  rgba(250, 250, 250, 0.5);
+  font-size: 1.23rem;
+  line-height: 2rem
+}
+
+.footer-text{
+  padding-bottom: 3.2rem;
+  max-width: 50rem;
+}
+
+.footer-socials{
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+  justify-content: flex-end;
+}
+
+.footer-socials img{
+  width: 2.3rem;
 }
